[package]
name = "album-template-generator"
version = "0.1.0"
authors = ["Chang-Jae Lee <sikinmettugi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
error-chain = "0.12.1"
serde = "1.0.102"
serde_derive = "1.0.102"
actix-web = "1.0.8"
